Feat/improved passphrase generation (#1555)
* wip: added salt step and translations

* wip: passphrase onboarding with salt now

* fix: visibilty

* feat: revamped account creation flow with custom salt

* fix: creation flow flags

* chore: refactored seeding process

* chore: refactored seeding process

* chore: nicer bg gfx

* feat: added whitespace visualizer

* chore: better readability of accoutn data

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -294,7 +294,7 @@
   "recipient_id": "Идентификатор на получателя",
   "recipient_no_public_key": "Акаунтът на получателя няма публичен ключ, което означава, че никога не е имал изходяща транзакция. Сметката има салдо от __burst__ Signa. Моля, проверете отново адреса на получателя си, преди да изпратите.",
   "recipients": "Получатели",
-  "record": "Запис",
+  "record": "Данни за акаунта",
   "referenced_transaction_full_hash": "Пълен хеш на препратената транзакция",
   "refund": "Възстановяване",
   "refunded": "Възстановено",
@@ -428,5 +428,12 @@
   "unknown_address": "Неизвестен адрес",
   "success_transaction_executed": "Транзакцията е успешно изпълнена",
   "no_tokens_available": "Няма налични жетони",
-  "trade_tokens_with": "Търгувайте жетони с"
+  "trade_tokens_with": "Търгувайте жетони с",
+  "define_your_salt": "Определете вашата индивидуална сол",
+  "enter_salt": "Въведете произволен буквено -цифров текст",
+  "salt_hint": "За да се повиши сигурността на вашата парола, вашият собствен отделен текстов елемент (сол) се добавя към произволно генерирания списък с думи. Това трябва да бъде прост кратък буквено -цифров израз, например нещо лично или генерирано на случаен принцип.",
+  "salt": "Добавете сол",
+  "your_new_account": "Вашата регистрирана сметка",
+  "click_to_print": "Щракнете, за да отпечатате",
+  "show_whitespaces": "Показване на празни пространства"
 }
