--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -294,7 +294,7 @@
   "recipient_id": "Αναγνωριστικό παραλήπτη",
   "recipient_no_public_key": "Ο λογαριασμός παραλήπτη δεν έχει δημόσιο κλειδί, που σημαίνει ότι δεν είχε ποτέ εξερχόμενη συναλλαγή Ο λογαριασμός έχει υπόλοιπο __burst__ Signa. Ελέγξτε ξανά τη διεύθυνση παραλήπτη πριν την υποβολή.",
   "recipients": "Παραλήπτες",
-  "record": "Ρεκόρ",
+  "record": "Δεδομένα λογαριασμού",
   "referenced_transaction_full_hash": "Αναφερόμενη συναλλαγή Full Hash",
   "refund": "Επιστροφή χρημάτων",
   "refunded": "Επιστροφή χρημάτων",
@@ -428,5 +428,12 @@
   "unknown_address": "Άγνωστη διεύθυνση",
   "success_transaction_executed": "Η συναλλαγή εκτελέστηκε με επιτυχία",
   "no_tokens_available": "Δεν υπάρχουν διαθέσιμα διακριτικά",
-  "trade_tokens_with": "Συναλλαγές μάρκες με"
+  "trade_tokens_with": "Συναλλαγές μάρκες με",
+  "define_your_salt": "Προσδιορίστε το ατομικό σας αλάτι",
+  "enter_salt": "Εισαγάγετε ένα αυθαίρετο αλφαριθμητικό κείμενο",
+  "salt_hint": "Για να αυξήσετε την ασφάλεια της φράσης πρόσβασης, το δικό σας μεμονωμένο στοιχείο κειμένου (αλάτι) προστίθεται στη λίστα λέξεων που τυχαία δημιουργείται. Αυτή θα πρέπει να είναι μια απλή σύντομη αλφαριθμητική έκφραση, π.χ. κάτι προσωπικό ή τυχαία δημιουργημένο.",
+  "salt": "Βάλε αλάτι",
+  "your_new_account": "Ο λογαριασμός εγγραφής σας",
+  "click_to_print": "Κάντε κλικ για εκτύπωση",
+  "show_whitespaces": "Εμφάνιση κενών χώρων"
 }
