--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -294,7 +294,7 @@
   "recipient_id": "ИД примаоца",
   "recipient_no_public_key": "Налог примаоца нема јавни кључ, што значи да никада није имао одлазну трансакцију. Стање на рачуну је __ бурст__ Сигна. Пре слања, поново проверите адресу примаоца.",
   "recipients": "Примаоци",
-  "record": "Запис",
+  "record": "Подаци о рачуну",
   "referenced_transaction_full_hash": "Референтна трансакција Фулл Хасх",
   "refund": "Враћање новца",
   "refunded": "Рефундед",
@@ -428,5 +428,12 @@
   "unknown_address": "Непозната адреса",
   "success_transaction_executed": "Трансакција је успешно извршена",
   "no_tokens_available": "Токени нису доступни",
-  "trade_tokens_with": "Тргујте токенима са"
+  "trade_tokens_with": "Тргујте токенима са",
+  "define_your_salt": "Дефинишите своју индивидуалну сол",
+  "enter_salt": "Унесите произвољан алфанумерички текст",
+  "salt_hint": "Да бисте повећали сигурност своје приступне фразе, ваш појединачни текстуални елемент (сол) додаје се на случајно генерисану листу речи. Ово би требало да буде једноставан кратак алфанумерички израз, на пример нешто лично или насумично генерисано.",
+  "salt": "Додајте со",
+  "your_new_account": "Ваш пријављени налог",
+  "click_to_print": "Кликните да бисте одштампали",
+  "show_whitespaces": "Прикажи размаке"
 }
