--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -294,7 +294,7 @@
   "recipient_id": "Identificador del destinatari",
   "recipient_no_public_key": "El compte destinatari no té una clau pública, és a dir, que mai no ha realitzat cap transacció de sortida. El compte té un saldo de __burst__ Signa. Comproveu la vostra adreça de destinatari abans d’enviar-la.",
   "recipients": "Destinataris",
-  "record": "Registre",
+  "record": "Dades del compte",
   "referenced_transaction_full_hash": "Hash complet de la transacció referenciat",
   "refund": "Reembossament",
   "refunded": "Reembossat",
@@ -428,5 +428,12 @@
   "unknown_address": "Adreça desconeguda",
   "success_transaction_executed": "La transacció s'ha executat correctament",
   "no_tokens_available": "No hi ha fitxes disponibles",
-  "trade_tokens_with": "Comerç de fitxes amb"
+  "trade_tokens_with": "Comerç de fitxes amb",
+  "define_your_salt": "Definiu la sal individual",
+  "enter_salt": "Introduïu un text alfanumèric arbitrari",
+  "salt_hint": "Per tal d’augmentar la seguretat de la vostra contrasenya, s’afegeix el vostre propi element de text individual (sal) a la llista de paraules generada aleatòriament. Aquesta hauria de ser una simple expressió alfanumèrica breu, per exemple, quelcom personal o generat aleatòriament.",
+  "salt": "Afegiu sal",
+  "your_new_account": "El vostre compte Signum",
+  "click_to_print": "Feu clic per imprimir",
+  "show_whitespaces": "Mostra espais en blanc"
 }
