--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -294,7 +294,7 @@
   "recipient_id": "Identifiant du destinataire",
   "recipient_no_public_key": "Le compte destinataire n'a pas de clé publique, ce qui signifie qu'il n'a jamais eu de transaction sortante. Le compte a un solde de __burst__ Signa. Veuillez vérifier votre adresse de destinataire avant de soumettre.",
   "recipients": "Destinataires",
-  "record": "Enregistrer",
+  "record": "Données de compte",
   "referenced_transaction_full_hash": "Hash complet de la transaction référencée",
   "refund": "Remboursement",
   "refunded": "Remboursé",
@@ -428,5 +428,12 @@
   "unknown_address": "Adresse inconnue",
   "success_transaction_executed": "Transaction exécutée avec succès",
   "no_tokens_available": "Aucun jeton disponible",
-  "trade_tokens_with": "Échangez des jetons avec"
+  "trade_tokens_with": "Échangez des jetons avec",
+  "define_your_salt": "Définissez votre sel individuel",
+  "enter_salt": "Saisissez un texte alphanumérique arbitraire",
+  "salt_hint": "Afin d'augmenter la sécurité de votre phrase secrète, votre propre élément de texte individuel (sel) est ajouté à la liste de mots générée aléatoirement. Il doit s'agir d'une simple expression alphanumérique courte, par exemple quelque chose de personnel ou généré de manière aléatoire.",
+  "salt": "Ajoutez du sel",
+  "your_new_account": "Votre compte Signum",
+  "click_to_print": "Cliquez pour imprimer",
+  "show_whitespaces": "Afficher les espaces"
 }
