--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -294,7 +294,7 @@
   "recipient_id": "ID do destinatario",
   "recipient_no_public_key": "A conta do destinatario non ten unha clave pública, o que significa que nunca tivo unha transacción de saída. A conta ten un saldo de __burst__ Signa. Comprobe o seu enderezo de destinatario antes de enviar.",
   "recipients": "Destinatarios",
-  "record": "Rexistro",
+  "record": "Datos da conta",
   "referenced_transaction_full_hash": "Transacción referenciada Full Hash",
   "refund": "Reembolso",
   "refunded": "Reembolsado",
@@ -428,5 +428,12 @@
   "unknown_address": "Enderezo descoñecido",
   "success_transaction_executed": "Transacción executada con éxito",
   "no_tokens_available": "Non hai fichas dispoñibles",
-  "trade_tokens_with": "Cambia fichas con"
+  "trade_tokens_with": "Cambia fichas con",
+  "define_your_salt": "Defina o sal individual",
+  "enter_salt": "Insira un texto alfanumérico arbitrario",
+  "salt_hint": "Para aumentar a seguridade da súa frase de acceso, engádese o seu propio elemento de texto individual (sal) á lista de palabras xerada aleatoriamente. Esta debería ser unha simple expresión alfanumérica curta, por exemplo, algo persoal ou xerado aleatoriamente.",
+  "salt": "Engade sal",
+  "your_new_account": "A túa conta Signum",
+  "click_to_print": "Fai clic para imprimir",
+  "show_whitespaces": "Mostrar espazos en branco"
 }
