--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -294,7 +294,7 @@
   "recipient_id": "ID primatelja",
   "recipient_no_public_key": "Račun primatelja nema javni ključ, što znači da nikada nije imao odlaznu transakciju. Stanje na računu je __ prasak__ Signa. Molimo provjerite adresu primatelja prije slanja.",
   "recipients": "Primatelji",
-  "record": "Snimiti",
+  "record": "Podaci računa",
   "referenced_transaction_full_hash": "Referentna transakcija Full Hash",
   "refund": "Povrat novca",
   "refunded": "Povrat novca",
@@ -428,5 +428,12 @@
   "unknown_address": "Nepoznata adresa",
   "success_transaction_executed": "Transakcija je uspješno izvršena",
   "no_tokens_available": "Nema dostupnih žetona",
-  "trade_tokens_with": "Trgujte tokenima s"
+  "trade_tokens_with": "Trgujte tokenima s",
+  "define_your_salt": "Definirajte svoju individualnu sol",
+  "enter_salt": "Unesite proizvoljan alfanumerički tekst",
+  "salt_hint": "Kako biste povećali sigurnost svoje zaporke, vaš vlastiti pojedinačni tekstualni element (sol) dodaje se nasumično generiranom popisu riječi. Ovo bi trebao biti jednostavan kratki alfanumerički izraz, npr. Nešto osobno ili nasumično generirano.",
+  "salt": "Dodajte sol",
+  "your_new_account": "Vaš prijavljeni račun",
+  "click_to_print": "Kliknite za ispis",
+  "show_whitespaces": "Prikaži bijele prostore"
 }
