--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -294,7 +294,7 @@
   "recipient_id": "ID penerima",
   "recipient_no_public_key": "Akun penerima tidak memiliki kunci publik, artinya tidak pernah melakukan transaksi keluar. Akun memiliki saldo __burst__ Signa. Harap periksa kembali alamat penerima Anda sebelum mengirimkan.",
   "recipients": "Penerima",
-  "record": "Merekam",
+  "record": "Data Akun",
   "referenced_transaction_full_hash": "Transaksi yang Direferensikan Hash Penuh",
   "refund": "Pengembalian dana",
   "refunded": "Dikembalikan",
@@ -428,5 +428,12 @@
   "unknown_address": "Alamat Tidak Diketahui",
   "success_transaction_executed": "Transaksi berhasil dijalankan",
   "no_tokens_available": "Tidak ada token yang tersedia",
-  "trade_tokens_with": "Perdagangkan token dengan"
+  "trade_tokens_with": "Perdagangkan token dengan",
+  "define_your_salt": "Tentukan Garam pribadi Anda",
+  "enter_salt": "Masukkan teks alfanumerik arbitrer",
+  "salt_hint": "Untuk meningkatkan keamanan frasa sandi Anda, elemen teks individual Anda (garam) ditambahkan ke daftar kata yang dibuat secara acak. Ini harus berupa ekspresi alfanumerik pendek sederhana, misalnya sesuatu yang bersifat pribadi atau dibuat secara acak.",
+  "salt": "Tambahkan garam",
+  "your_new_account": "Akun Signum Anda",
+  "click_to_print": "Klik untuk mencetak",
+  "show_whitespaces": "Tampilkan Spasi Putih"
 }
