--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -294,7 +294,7 @@
   "recipient_id": "Gavėjo ID",
   "recipient_no_public_key": "Gavėjo sąskaita neturi viešojo rakto, tai reiškia, kad ji niekada neturėjo išeinančių operacijų. Sąskaitos likutis __burst__ Signa. Prieš pateikdami, dar kartą patikrinkite savo gavėjo adresą.",
   "recipients": "Gavėjai",
-  "record": "Įrašyti",
+  "record": "Paskyros duomenys",
   "referenced_transaction_full_hash": "Nurodytas visas sandoris",
   "refund": "Grąžinti pinigus",
   "refunded": "Grąžinta",
@@ -428,5 +428,12 @@
   "unknown_address": "Nežinomas adresas",
   "success_transaction_executed": "Sandoris sėkmingai įvykdytas",
   "no_tokens_available": "Žetonų nėra",
-  "trade_tokens_with": "Prekyba žetonais su"
+  "trade_tokens_with": "Prekyba žetonais su",
+  "define_your_salt": "Apibrėžkite savo individualią druską",
+  "enter_salt": "Įveskite bet kokį raidinį ir skaitmeninį tekstą",
+  "salt_hint": "Siekiant padidinti slaptafrazės saugumą, jūsų atskiras teksto elementas (druska) įtraukiamas į atsitiktinai sugeneruotą žodžių sąrašą. Tai turėtų būti paprasta trumpa raidinė ir skaitinė išraiška, pvz., Kažkas asmeniško ar atsitiktinai sugeneruoto.",
+  "salt": "Įpilkite druskos",
+  "your_new_account": "Jūsų „Signum“ paskyra",
+  "click_to_print": "Spustelėkite, jei norite spausdinti",
+  "show_whitespaces": "Rodyti baltas erdves"
 }
