--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -294,7 +294,7 @@
   "recipient_id": "ID do Destinatário",
   "recipient_no_public_key": "A conta do destinatário não tem uma chave pública, o que significa que nunca teve uma transação de saída. A conta tem um saldo de __burst__ Signa. Verifique novamente o endereço do destinatário antes de enviar.",
   "recipients": "Destinatários",
-  "record": "Registro",
+  "record": "Dados da conta",
   "referenced_transaction_full_hash": "Hash completo da transação referenciada",
   "refund": "Reembolso",
   "refunded": "Devolveu",
@@ -428,5 +428,12 @@
   "unknown_address": "Endereço Desconhecido",
   "success_transaction_executed": "Transação executada com sucesso",
   "no_tokens_available": "Nenhum tokens disponível",
-  "trade_tokens_with": "Negocie tokens com"
+  "trade_tokens_with": "Negocie tokens com",
+  "define_your_salt": "Defina o seu Sal individual",
+  "enter_salt": "Insira um texto alfanumérico arbitrário",
+  "salt_hint": "Para aumentar a segurança de sua frase-senha, seu próprio elemento de texto individual (salt) é adicionado à lista de palavras gerada aleatoriamente. Deve ser uma expressão alfanumérica curta simples, por exemplo, algo pessoal ou gerado aleatoriamente.",
+  "salt": "Adicione sal",
+  "your_new_account": "Sua conta Signum",
+  "click_to_print": "Clique para imprimir",
+  "show_whitespaces": "Mostrar espaços em branco"
 }
