--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -294,7 +294,7 @@
   "recipient_id": "ID получателя",
   "recipient_no_public_key": "Счет получателя не имеет публичного ключа, то есть по нему никогда не проводились исходящие транзакции. На счету имеется баланс в размере __burst__ Signa. Пожалуйста, дважды проверьте адрес получателя перед отправкой.",
   "recipients": "Получатели",
-  "record": "Сохранение",
+  "record": "Данные учетной записи",
   "referenced_transaction_full_hash": "Полный хэш указанной транзакции",
   "refund": "Возврат",
   "refunded": "Возвращено",
@@ -428,5 +428,12 @@
   "unknown_address": "Неизвестный адрес",
   "success_transaction_executed": "Транзакция успешно выполнена",
   "no_tokens_available": "Нет доступных токенов",
-  "trade_tokens_with": "Обменять токены с"
+  "trade_tokens_with": "Обменять токены с",
+  "define_your_salt": "Определите свою индивидуальную соль",
+  "enter_salt": "Введите произвольный буквенно-цифровой текст",
+  "salt_hint": "Чтобы повысить безопасность вашей ключевой фразы, ваш собственный индивидуальный текстовый элемент (соль) добавляется в случайно сгенерированный список слов. Это должно быть простое короткое буквенно-цифровое выражение, например, что-то личное или сгенерированное случайным образом.",
+  "salt": "Добавить соль",
+  "your_new_account": "Ваша учетная запись Signum",
+  "click_to_print": "Нажмите, чтобы распечатать",
+  "show_whitespaces": "Показать пробелы"
 }
