--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -294,7 +294,7 @@
   "recipient_id": "Ідентифікатор одержувача",
   "recipient_no_public_key": "Обліковий запис одержувача не має відкритого ключа, тобто він ніколи не мав вихідної транзакції. Залишок на рахунку __burst__ Signa. Будь ласка, перевірте адресу одержувача перед надсиланням.",
   "recipients": "Одержувачі",
-  "record": "Запис",
+  "record": "Дані облікового запису",
   "referenced_transaction_full_hash": "Повний хеш згаданої транзакції",
   "refund": "Відшкодування",
   "refunded": "Повернено",
@@ -428,5 +428,12 @@
   "unknown_address": "Невідома адреса",
   "success_transaction_executed": "Транзакцію успішно виконано",
   "no_tokens_available": "Жодних токенів немає",
-  "trade_tokens_with": "Торгуйте токенами за допомогою"
+  "trade_tokens_with": "Торгуйте токенами за допомогою",
+  "define_your_salt": "Визначте свою індивідуальну сіль",
+  "enter_salt": "Введіть довільний буквено -цифровий текст",
+  "salt_hint": "Для того, щоб підвищити безпеку вашої парольної фрази, ваш власний окремий текстовий елемент (сіль) додається до випадково створеного списку слів. Це має бути простий короткий буквено -цифровий вираз, наприклад, щось особисте або випадково створене.",
+  "salt": "Додати сіль",
+  "your_new_account": "Ваш обліковий запис для реєстрації",
+  "click_to_print": "Натисніть, щоб надрукувати",
+  "show_whitespaces": "Показати пробіли"
 }
