--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -294,7 +294,7 @@
   "recipient_id": "收件人编号",
   "recipient_no_public_key": "收件人帐户没有公钥，这意味着它从未有过传出交易。该帐户的余额为 __burst__ Signa。请在提交前仔细检查您的收件人地址。",
   "recipients": "收件人",
-  "record": "记录",
+  "record": "账户资料",
   "referenced_transaction_full_hash": "引用交易全哈希",
   "refund": "退款",
   "refunded": "已退款",
@@ -428,5 +428,12 @@
   "unknown_address": "未知地址",
   "success_transaction_executed": "交易成功执行",
   "no_tokens_available": "没有可用的令牌",
-  "trade_tokens_with": "交易代币"
+  "trade_tokens_with": "交易代币",
+  "define_your_salt": "定义您的个人盐",
+  "enter_salt": "输入任意字母数字文本",
+  "salt_hint": "为了提高密码的安全性，您自己的个人文本元素（盐）被添加到随机生成的单词列表中。这应该是一个简单的短字母数字表达式，例如个人或随机生成的东西。",
+  "salt": "加盐",
+  "your_new_account": "您的登录帐户",
+  "click_to_print": "点击打印",
+  "show_whitespaces": "显示空格"
 }
