--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -384,7 +384,6 @@
   "watch_burst_account": "Observe a conta",
   "wrong_pin": "PIN incorrecto",
   "yes": "Si",
-  "yesterdays_change": "Cambio das últimas 24 horas",
   "you": "Ti",
   "you_sent_burst": "Enviaches a Signa",
   "your_address": "O seu enderezo",
@@ -444,5 +443,6 @@
   "salt": "Engade sal",
   "your_new_account": "A túa conta Signum",
   "click_to_print": "Fai clic para imprimir",
-  "show_whitespaces": "Mostrar espazos en branco"
+  "show_whitespaces": "Mostrar espazos en branco",
+  "price_change": "Cambio de prezo"
 }
