--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -384,7 +384,6 @@
   "watch_burst_account": "Promatrajte račun",
   "wrong_pin": "Pogrešan PIN",
   "yes": "Da",
-  "yesterdays_change": "Promjena u posljednja 24 sata",
   "you": "Vas",
   "you_sent_burst": "Poslali ste Signu",
   "your_address": "Vaša adresa",
@@ -444,5 +443,6 @@
   "salt": "Dodajte sol",
   "your_new_account": "Vaš prijavljeni račun",
   "click_to_print": "Kliknite za ispis",
-  "show_whitespaces": "Prikaži bijele prostore"
+  "show_whitespaces": "Prikaži bijele prostore",
+  "price_change": "Promjena cijene"
 }
