--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -384,7 +384,6 @@
   "watch_burst_account": "Perhatikan Akun",
   "wrong_pin": "PIN salah",
   "yes": "Iya",
-  "yesterdays_change": "Perubahan 24 Jam Terakhir",
   "you": "Kamu",
   "you_sent_burst": "Anda mengirim Signa",
   "your_address": "Alamat Anda",
@@ -444,5 +443,6 @@
   "salt": "Tambahkan garam",
   "your_new_account": "Akun Signum Anda",
   "click_to_print": "Klik untuk mencetak",
-  "show_whitespaces": "Tampilkan Spasi Putih"
+  "show_whitespaces": "Tampilkan Spasi Putih",
+  "price_change": "Perubahan harga"
 }
