feat: improved price change indicator

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -444,5 +444,6 @@
   "your_new_account": "Вашата регистрирана сметка",
   "click_to_print": "Щракнете, за да отпечатате",
   "show_whitespaces": "Показване на празни пространства",
-  "price_change": "Промяна на цената"
+  "price_change": "Промяна на цената",
+  "balance_reserved": "Запазен баланс"
 }
