--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -444,5 +444,6 @@
   "your_new_account": "Váš účet Signum",
   "click_to_print": "Klepnutím vytisknete",
   "show_whitespaces": "Zobrazit mezery",
-  "price_change": "Změna ceny"
+  "price_change": "Změna ceny",
+  "balance_reserved": "Rezervovaný zůstatek"
 }
