--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -444,5 +444,6 @@
   "your_new_account": "Dein Signum-Konto",
   "click_to_print": "Zum Drucken klicken",
   "show_whitespaces": "Leerzeichen anzeigen",
-  "price_change": "Preisveränderung"
+  "price_change": "Preisveränderung",
+  "balance_reserved": "Reserviertes Guthaben"
 }
