--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -444,5 +444,6 @@
   "your_new_account": "Ο λογαριασμός εγγραφής σας",
   "click_to_print": "Κάντε κλικ για εκτύπωση",
   "show_whitespaces": "Εμφάνιση κενών χώρων",
-  "price_change": "Αλλαγή Τιμής"
+  "price_change": "Αλλαγή Τιμής",
+  "balance_reserved": "Κρατημένο υπόλοιπο"
 }
