--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -444,5 +444,6 @@
   "your_new_account": "Your Signum Account",
   "click_to_print": "Click to print",
   "show_whitespaces": "Show Whitespaces",
-  "price_change": "Price Change"
+  "price_change": "Price Change",
+  "balance_reserved": "Reserved Balance"
 }
