--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -444,5 +444,6 @@
   "your_new_account": "Su cuenta Signum",
   "click_to_print": "Haga clic para imprimir",
   "show_whitespaces": "Mostrar espacios en blanco",
-  "price_change": "Cambio de precio"
+  "price_change": "Cambio de precio",
+  "balance_reserved": "Saldo reservado"
 }
