--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -444,5 +444,6 @@
   "your_new_account": "Signum -tilisi",
   "click_to_print": "Tulosta napsauttamalla",
   "show_whitespaces": "Näytä välilyönnit",
-  "price_change": "Hinta Muutos"
+  "price_change": "Hinta Muutos",
+  "balance_reserved": "Varattu saldo"
 }
