--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -444,5 +444,6 @@
   "your_new_account": "A túa conta Signum",
   "click_to_print": "Fai clic para imprimir",
   "show_whitespaces": "Mostrar espazos en branco",
-  "price_change": "Cambio de prezo"
+  "price_change": "Cambio de prezo",
+  "balance_reserved": "Saldo reservado"
 }
