--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -444,5 +444,6 @@
   "your_new_account": "आपका साइनम खाता",
   "click_to_print": "प्रिंट करने के लिए क्लिक करें",
   "show_whitespaces": "व्हॉट्सएप दिखाएं",
-  "price_change": "मूल्य परिवर्तन"
+  "price_change": "मूल्य परिवर्तन",
+  "balance_reserved": "आरक्षित शेष राशि"
 }
