--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -444,5 +444,6 @@
   "your_new_account": "Vaš prijavljeni račun",
   "click_to_print": "Kliknite za ispis",
   "show_whitespaces": "Prikaži bijele prostore",
-  "price_change": "Promjena cijene"
+  "price_change": "Promjena cijene",
+  "balance_reserved": "Rezervirano stanje"
 }
