--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -444,5 +444,6 @@
   "your_new_account": "Akun Signum Anda",
   "click_to_print": "Klik untuk mencetak",
   "show_whitespaces": "Tampilkan Spasi Putih",
-  "price_change": "Perubahan harga"
+  "price_change": "Perubahan harga",
+  "balance_reserved": "Saldo Cadangan"
 }
