--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -444,5 +444,6 @@
   "your_new_account": "Il tuo account Signum",
   "click_to_print": "Clicca per stampare",
   "show_whitespaces": "Mostra spazi bianchi",
-  "price_change": "Cambio di prezzo"
+  "price_change": "Cambio di prezzo",
+  "balance_reserved": "Saldo riservato"
 }
