--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -444,5 +444,6 @@
   "your_new_account": "Jūsų „Signum“ paskyra",
   "click_to_print": "Spustelėkite, jei norite spausdinti",
   "show_whitespaces": "Rodyti baltas erdves",
-  "price_change": "Kainos keitimas"
+  "price_change": "Kainos keitimas",
+  "balance_reserved": "Rezervuotas balansas"
 }
