--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -444,5 +444,6 @@
   "your_new_account": "Uw Signum-account",
   "click_to_print": "Klik om af te drukken",
   "show_whitespaces": "Witruimte tonen",
-  "price_change": "Prijs verandering"
+  "price_change": "Prijs verandering",
+  "balance_reserved": "Gereserveerd saldo"
 }
