--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -444,5 +444,6 @@
   "your_new_account": "Twoje konto Signum",
   "click_to_print": "Kliknij, aby wydrukować",
   "show_whitespaces": "Pokaż białe znaki",
-  "price_change": "Zmiana ceny"
+  "price_change": "Zmiana ceny",
+  "balance_reserved": "Zarezerwowane saldo"
 }
