--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -444,5 +444,6 @@
   "your_new_account": "Sua conta Signum",
   "click_to_print": "Clique para imprimir",
   "show_whitespaces": "Mostrar espaços em branco",
-  "price_change": "Mudança de preço"
+  "price_change": "Mudança de preço",
+  "balance_reserved": "Saldo Reservado"
 }
