--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -444,5 +444,6 @@
   "your_new_account": "Contul dvs. Signum",
   "click_to_print": "Faceți clic pentru a imprima",
   "show_whitespaces": "Afișați spațiile albe",
-  "price_change": "Schimbare de preț"
+  "price_change": "Schimbare de preț",
+  "balance_reserved": "Sold rezervat"
 }
