--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -444,5 +444,6 @@
   "your_new_account": "Ваша учетная запись Signum",
   "click_to_print": "Нажмите, чтобы распечатать",
   "show_whitespaces": "Показать пробелы",
-  "price_change": "Изменение цены"
+  "price_change": "Изменение цены",
+  "balance_reserved": "Зарезервированный баланс"
 }
