--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -444,5 +444,6 @@
   "your_new_account": "Váš účet Signum",
   "click_to_print": "Kliknutím vytlačíte",
   "show_whitespaces": "Zobraziť medzery",
-  "price_change": "Zmena ceny"
+  "price_change": "Zmena ceny",
+  "balance_reserved": "Vyhradený zostatok"
 }
