--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -444,5 +444,6 @@
   "your_new_account": "Ваш пријављени налог",
   "click_to_print": "Кликните да бисте одштампали",
   "show_whitespaces": "Прикажи размаке",
-  "price_change": "Промена цене"
+  "price_change": "Промена цене",
+  "balance_reserved": "Резервисано стање"
 }
