--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -444,5 +444,6 @@
   "your_new_account": "Signum Hesabınız",
   "click_to_print": "Yazdırmak için tıklayın",
   "show_whitespaces": "Boşlukları Göster",
-  "price_change": "Fiyat Değişikliği"
+  "price_change": "Fiyat Değişikliği",
+  "balance_reserved": "Ayrılmış Bakiye"
 }
