--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -444,5 +444,6 @@
   "your_new_account": "您的登录帐户",
   "click_to_print": "点击打印",
   "show_whitespaces": "显示空格",
-  "price_change": "价格变化"
+  "price_change": "价格变化",
+  "balance_reserved": "预留余额"
 }
