--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -444,5 +444,6 @@
   "your_new_account": "El vostre compte Signum",
   "click_to_print": "Feu clic per imprimir",
   "show_whitespaces": "Mostra espais en blanc",
-  "price_change": "Canvi de preu"
+  "price_change": "Canvi de preu",
+  "balance_reserved": "Saldo reservat"
 }
