--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -444,5 +444,6 @@
   "your_new_account": "Votre compte Signum",
   "click_to_print": "Cliquez pour imprimer",
   "show_whitespaces": "Afficher les espaces",
-  "price_change": "Changement de prix"
+  "price_change": "Changement de prix",
+  "balance_reserved": "Solde réservé"
 }
