--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -444,5 +444,6 @@
   "your_new_account": "Ваш обліковий запис для реєстрації",
   "click_to_print": "Натисніть, щоб надрукувати",
   "show_whitespaces": "Показати пробіли",
-  "price_change": "Зміна ціни"
+  "price_change": "Зміна ціни",
+  "balance_reserved": "Зарезервований баланс"
 }
